improve statistic